chore: improve a11y, fixing contrast on colors

--- a/src/app/core/components/controls/controls.component.scss
+++ b/src/app/core/components/controls/controls.component.scss
@@ -7,7 +7,7 @@
 
   button {
     font-size: 1.5rem;
-    background-color: #18b351;
+    background-color: #0c652b;
 
     &:active {
       background-color: #fff;
